--- a/src/eval_ilp.ipynb
+++ b/src/eval_ilp.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -28,7 +28,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -52,7 +52,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -81,19 +81,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
     "alg_list = [\"fraudar\", \"rsd\", \"rev2\"][:3]\n",
     "data_list = [\"alpha\", \"otc\", \"amazon\", \"epinions\"][:3]\n",
-    "budget_list = [100.0, 200.0, 300.0, 400.0]\n",
+    "budget_list = [100.0, 200.0, 300.0, 400.0, 500.0]\n",
     "frac_list = [0.0, 0.2, 0.4, 0.6, 0.8]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
@@ -124,7 +124,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
@@ -213,20 +213,20 @@
        "    <tr>\n",
        "      <th rowspan=\"5\" valign=\"top\">amazon</th>\n",
        "      <th rowspan=\"5\" valign=\"top\">rev2</th>\n",
-       "      <th rowspan=\"5\" valign=\"top\">400.0</th>\n",
+       "      <th rowspan=\"5\" valign=\"top\">500.0</th>\n",
        "      <th rowspan=\"2\" valign=\"top\">0.6</th>\n",
        "      <th>recall</th>\n",
-       "      <td>0.165919</td>\n",
-       "      <td>0.234432</td>\n",
-       "      <td>0.304985</td>\n",
-       "      <td>0.360313</td>\n",
+       "      <td>0.142857</td>\n",
+       "      <td>0.207120</td>\n",
+       "      <td>0.275862</td>\n",
+       "      <td>0.329356</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>f1</th>\n",
-       "      <td>0.256055</td>\n",
-       "      <td>0.320000</td>\n",
-       "      <td>0.355556</td>\n",
-       "      <td>0.384401</td>\n",
+       "      <td>0.227692</td>\n",
+       "      <td>0.293578</td>\n",
+       "      <td>0.334944</td>\n",
+       "      <td>0.366048</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th rowspan=\"3\" valign=\"top\">0.8</th>\n",
@@ -238,21 +238,21 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>recall</th>\n",
-       "      <td>0.136531</td>\n",
-       "      <td>0.199377</td>\n",
-       "      <td>0.267352</td>\n",
-       "      <td>0.320186</td>\n",
+       "      <td>0.115987</td>\n",
+       "      <td>0.173442</td>\n",
+       "      <td>0.237986</td>\n",
+       "      <td>0.288100</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>f1</th>\n",
-       "      <td>0.219585</td>\n",
-       "      <td>0.285714</td>\n",
-       "      <td>0.328594</td>\n",
-       "      <td>0.360313</td>\n",
+       "      <td>0.192208</td>\n",
+       "      <td>0.258065</td>\n",
+       "      <td>0.305433</td>\n",
+       "      <td>0.339066</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
-       "<p>534 rows × 4 columns</p>\n",
+       "<p>669 rows × 4 columns</p>\n",
        "</div>"
       ],
       "text/plain": [
@@ -263,13 +263,13 @@
        "                     0.2 precision  0.350785  0.370968  0.380682  0.335526\n",
        "                         recall     0.761364  0.741935  0.770115  0.629630\n",
        "...                                      ...       ...       ...       ...\n",
-       "amazon rev2    400.0 0.6 recall     0.165919  0.234432  0.304985  0.360313\n",
-       "                         f1         0.256055  0.320000  0.355556  0.384401\n",
+       "amazon rev2    500.0 0.6 recall     0.142857  0.207120  0.275862  0.329356\n",
+       "                         f1         0.227692  0.293578  0.334944  0.366048\n",
        "                     0.8 precision  0.560606  0.503937  0.426230  0.411940\n",
-       "                         recall     0.136531  0.199377  0.267352  0.320186\n",
-       "                         f1         0.219585  0.285714  0.328594  0.360313\n",
+       "                         recall     0.115987  0.173442  0.237986  0.288100\n",
+       "                         f1         0.192208  0.258065  0.305433  0.339066\n",
        "\n",
-       "[534 rows x 4 columns]"
+       "[669 rows x 4 columns]"
       ]
      },
      "metadata": {},
@@ -312,7 +312,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -325,7 +325,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 52,
    "metadata": {},
    "outputs": [
     {
@@ -353,64 +353,70 @@
        "      <th>200.0</th>\n",
        "      <th>300.0</th>\n",
        "      <th>400.0</th>\n",
+       "      <th>500.0</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>baseline-0.0</th>\n",
-       "      <td>0.136290</td>\n",
-       "      <td>0.135441</td>\n",
-       "      <td>0.135441</td>\n",
-       "      <td>0.135441</td>\n",
+       "      <td>0.490046</td>\n",
+       "      <td>0.490709</td>\n",
+       "      <td>0.490709</td>\n",
+       "      <td>0.490709</td>\n",
+       "      <td>0.490709</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>baseline-0.2</th>\n",
-       "      <td>0.133209</td>\n",
-       "      <td>0.131054</td>\n",
-       "      <td>0.128974</td>\n",
-       "      <td>0.126962</td>\n",
+       "      <td>0.462302</td>\n",
+       "      <td>0.450966</td>\n",
+       "      <td>0.433928</td>\n",
+       "      <td>0.418390</td>\n",
+       "      <td>0.404135</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>baseline-0.4</th>\n",
-       "      <td>0.131175</td>\n",
-       "      <td>0.127749</td>\n",
-       "      <td>0.123135</td>\n",
-       "      <td>0.119545</td>\n",
+       "      <td>0.445131</td>\n",
+       "      <td>0.416957</td>\n",
+       "      <td>0.390990</td>\n",
+       "      <td>0.367492</td>\n",
+       "      <td>0.347033</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>baseline-0.6</th>\n",
-       "      <td>0.128974</td>\n",
-       "      <td>0.123135</td>\n",
-       "      <td>0.117833</td>\n",
-       "      <td>0.112993</td>\n",
+       "      <td>0.426932</td>\n",
+       "      <td>0.388291</td>\n",
+       "      <td>0.355790</td>\n",
+       "      <td>0.329003</td>\n",
+       "      <td>0.305565</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>baseline-0.8</th>\n",
-       "      <td>0.126962</td>\n",
-       "      <td>0.119545</td>\n",
-       "      <td>0.112993</td>\n",
-       "      <td>0.107155</td>\n",
+       "      <td>0.410979</td>\n",
+       "      <td>0.364386</td>\n",
+       "      <td>0.326683</td>\n",
+       "      <td>0.298552</td>\n",
+       "      <td>0.273693</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "budget           100.0     200.0     300.0     400.0\n",
-       "baseline-0.0  0.136290  0.135441  0.135441  0.135441\n",
-       "baseline-0.2  0.133209  0.131054  0.128974  0.126962\n",
-       "baseline-0.4  0.131175  0.127749  0.123135  0.119545\n",
-       "baseline-0.6  0.128974  0.123135  0.117833  0.112993\n",
-       "baseline-0.8  0.126962  0.119545  0.112993  0.107155"
+       "budget           100.0     200.0     300.0     400.0     500.0\n",
+       "baseline-0.0  0.490046  0.490709  0.490709  0.490709  0.490709\n",
+       "baseline-0.2  0.462302  0.450966  0.433928  0.418390  0.404135\n",
+       "baseline-0.4  0.445131  0.416957  0.390990  0.367492  0.347033\n",
+       "baseline-0.6  0.426932  0.388291  0.355790  0.329003  0.305565\n",
+       "baseline-0.8  0.410979  0.364386  0.326683  0.298552  0.273693"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 52,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "get_alg_data_met(df_met, alg=\"fraudar\", data=\"amazon\", met=\"f1\")"
+    "get_alg_data_met(df_met, alg=\"rev2\", data=\"amazon\", met=\"f1\")"
    ]
   }
  ],
