--- a/src/eval_sockfarm.ipynb
+++ b/src/eval_sockfarm.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 58,
+   "execution_count": 86,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -28,7 +28,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 59,
+   "execution_count": 87,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -52,7 +52,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 60,
+   "execution_count": 88,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -81,7 +81,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 61,
+   "execution_count": 89,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -93,7 +93,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 78,
+   "execution_count": 90,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -106,16 +106,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 64,
+   "execution_count": 94,
    "metadata": {},
    "outputs": [],
    "source": [
-    "attack_res[(\"alpha\", \"rsd\", 400.0)].to_csv(\"ar.csv\")"
+    "attack_res[(\"alpha\", \"rev2\", 400.0)].to_csv(\"ar.csv\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 79,
+   "execution_count": 98,
    "metadata": {},
    "outputs": [
     {
@@ -154,38 +154,38 @@
        "      <th rowspan=\"5\" valign=\"top\">fraudar</th>\n",
        "      <th rowspan=\"3\" valign=\"top\">100.0</th>\n",
        "      <th>precision</th>\n",
-       "      <td>0.354167</td>\n",
-       "      <td>0.375661</td>\n",
-       "      <td>0.380682</td>\n",
+       "      <td>0.352201</td>\n",
+       "      <td>0.352201</td>\n",
+       "      <td>0.352201</td>\n",
        "      <td>0.352201</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>recall</th>\n",
-       "      <td>0.435897</td>\n",
-       "      <td>0.440994</td>\n",
-       "      <td>0.432258</td>\n",
+       "      <td>0.375839</td>\n",
+       "      <td>0.375839</td>\n",
+       "      <td>0.375839</td>\n",
        "      <td>0.375839</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>f1</th>\n",
-       "      <td>0.390805</td>\n",
-       "      <td>0.405714</td>\n",
-       "      <td>0.404834</td>\n",
+       "      <td>0.363636</td>\n",
+       "      <td>0.363636</td>\n",
+       "      <td>0.363636</td>\n",
        "      <td>0.363636</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th rowspan=\"2\" valign=\"top\">200.0</th>\n",
        "      <th>precision</th>\n",
-       "      <td>0.354167</td>\n",
-       "      <td>0.375661</td>\n",
-       "      <td>0.380682</td>\n",
+       "      <td>0.352201</td>\n",
+       "      <td>0.352201</td>\n",
+       "      <td>0.352201</td>\n",
        "      <td>0.352201</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>recall</th>\n",
-       "      <td>0.288136</td>\n",
-       "      <td>0.294606</td>\n",
-       "      <td>0.285106</td>\n",
+       "      <td>0.244541</td>\n",
+       "      <td>0.244541</td>\n",
+       "      <td>0.244541</td>\n",
        "      <td>0.244541</td>\n",
        "    </tr>\n",
        "    <tr>\n",
@@ -203,39 +203,39 @@
        "      <th rowspan=\"5\" valign=\"top\">rev2</th>\n",
        "      <th rowspan=\"2\" valign=\"top\">300.0</th>\n",
        "      <th>recall</th>\n",
-       "      <td>0.304225</td>\n",
-       "      <td>0.298295</td>\n",
-       "      <td>0.284058</td>\n",
-       "      <td>0.273529</td>\n",
+       "      <td>0.111765</td>\n",
+       "      <td>0.111765</td>\n",
+       "      <td>0.111765</td>\n",
+       "      <td>0.111765</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>f1</th>\n",
-       "      <td>0.369231</td>\n",
-       "      <td>0.369069</td>\n",
-       "      <td>0.367730</td>\n",
-       "      <td>0.357006</td>\n",
+       "      <td>0.196382</td>\n",
+       "      <td>0.196382</td>\n",
+       "      <td>0.196382</td>\n",
+       "      <td>0.196382</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th rowspan=\"3\" valign=\"top\">400.0</th>\n",
        "      <th>precision</th>\n",
-       "      <td>0.469565</td>\n",
-       "      <td>0.483871</td>\n",
-       "      <td>0.521277</td>\n",
-       "      <td>0.513812</td>\n",
+       "      <td>0.808511</td>\n",
+       "      <td>0.808511</td>\n",
+       "      <td>0.808511</td>\n",
+       "      <td>0.808511</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>recall</th>\n",
-       "      <td>0.248276</td>\n",
-       "      <td>0.243056</td>\n",
-       "      <td>0.230588</td>\n",
-       "      <td>0.221429</td>\n",
+       "      <td>0.090476</td>\n",
+       "      <td>0.090476</td>\n",
+       "      <td>0.090476</td>\n",
+       "      <td>0.090476</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>f1</th>\n",
-       "      <td>0.324812</td>\n",
-       "      <td>0.323575</td>\n",
-       "      <td>0.319739</td>\n",
-       "      <td>0.309484</td>\n",
+       "      <td>0.162741</td>\n",
+       "      <td>0.162741</td>\n",
+       "      <td>0.162741</td>\n",
+       "      <td>0.162741</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -244,17 +244,17 @@
       ],
       "text/plain": [
        "                                      0         1         2         3\n",
-       "alpha fraudar 100.0 precision  0.354167  0.375661  0.380682  0.352201\n",
-       "                    recall     0.435897  0.440994  0.432258  0.375839\n",
-       "                    f1         0.390805  0.405714  0.404834  0.363636\n",
-       "              200.0 precision  0.354167  0.375661  0.380682  0.352201\n",
-       "                    recall     0.288136  0.294606  0.285106  0.244541\n",
+       "alpha fraudar 100.0 precision  0.352201  0.352201  0.352201  0.352201\n",
+       "                    recall     0.375839  0.375839  0.375839  0.375839\n",
+       "                    f1         0.363636  0.363636  0.363636  0.363636\n",
+       "              200.0 precision  0.352201  0.352201  0.352201  0.352201\n",
+       "                    recall     0.244541  0.244541  0.244541  0.244541\n",
        "...                                 ...       ...       ...       ...\n",
-       "otc   rev2    300.0 recall     0.304225  0.298295  0.284058  0.273529\n",
-       "                    f1         0.369231  0.369069  0.367730  0.357006\n",
-       "              400.0 precision  0.469565  0.483871  0.521277  0.513812\n",
-       "                    recall     0.248276  0.243056  0.230588  0.221429\n",
-       "                    f1         0.324812  0.323575  0.319739  0.309484\n",
+       "otc   rev2    300.0 recall     0.111765  0.111765  0.111765  0.111765\n",
+       "                    f1         0.196382  0.196382  0.196382  0.196382\n",
+       "              400.0 precision  0.808511  0.808511  0.808511  0.808511\n",
+       "                    recall     0.090476  0.090476  0.090476  0.090476\n",
+       "                    f1         0.162741  0.162741  0.162741  0.162741\n",
        "\n",
        "[72 rows x 4 columns]"
       ]
@@ -267,7 +267,7 @@
     "th_dict = {\n",
     "    \"fraudar\": 0.5,\n",
     "    \"rsd\": 0.6,\n",
-    "    \"rev2\": 0.1,\n",
+    "    \"rev2\": 0.5,\n",
     "}\n",
     "dict_met = {\n",
     "    (d, a, b): pd.DataFrame.from_dict(get_metrics(df_res=attack_res[(d, a, b)], splits=4, K=None, th=th_dict[a]))\n",
@@ -280,7 +280,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 80,
+   "execution_count": 99,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -293,7 +293,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 85,
+   "execution_count": 107,
    "metadata": {},
    "outputs": [
     {
@@ -326,24 +326,24 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>sockfarm-fraudar</th>\n",
-       "      <td>0.421247</td>\n",
-       "      <td>0.278097</td>\n",
-       "      <td>0.207575</td>\n",
-       "      <td>0.165588</td>\n",
+       "      <td>0.433333</td>\n",
+       "      <td>0.300000</td>\n",
+       "      <td>0.229412</td>\n",
+       "      <td>0.185714</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>sockfarm-rev2</th>\n",
-       "      <td>0.722209</td>\n",
-       "      <td>0.645536</td>\n",
-       "      <td>0.421289</td>\n",
-       "      <td>0.386615</td>\n",
+       "      <td>0.211111</td>\n",
+       "      <td>0.146154</td>\n",
+       "      <td>0.111765</td>\n",
+       "      <td>0.090476</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>sockfarm-rsd</th>\n",
-       "      <td>0.109645</td>\n",
-       "      <td>0.072313</td>\n",
-       "      <td>0.053949</td>\n",
-       "      <td>0.043024</td>\n",
+       "      <td>0.294444</td>\n",
+       "      <td>0.203846</td>\n",
+       "      <td>0.155882</td>\n",
+       "      <td>0.126190</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -351,18 +351,18 @@
       ],
       "text/plain": [
        "budget               100.0     200.0     300.0     400.0\n",
-       "sockfarm-fraudar  0.421247  0.278097  0.207575  0.165588\n",
-       "sockfarm-rev2     0.722209  0.645536  0.421289  0.386615\n",
-       "sockfarm-rsd      0.109645  0.072313  0.053949  0.043024"
+       "sockfarm-fraudar  0.433333  0.300000  0.229412  0.185714\n",
+       "sockfarm-rev2     0.211111  0.146154  0.111765  0.090476\n",
+       "sockfarm-rsd      0.294444  0.203846  0.155882  0.126190"
       ]
      },
-     "execution_count": 85,
+     "execution_count": 107,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "get_alg_data_met(df_met, data=\"alpha\", met=\"recall\")"
+    "get_alg_data_met(df_met, data=\"otc\", met=\"recall\")"
    ]
   }
  ],
