add sockdef eval

--- a/src/eval_ilp.ipynb
+++ b/src/eval_ilp.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -28,7 +28,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -52,7 +52,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -81,19 +81,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
     "alg_list = [\"fraudar\", \"rsd\", \"rev2\"][:3]\n",
     "data_list = [\"alpha\", \"otc\", \"amazon\", \"epinions\"][:3]\n",
-    "budget_list = [100.0, 200.0, 300.0, 400.0, 500.0]\n",
+    "budget_list = [100.0, 200.0, 300.0, 400.0]\n",
     "frac_list = [0.0, 0.2, 0.4, 0.6, 0.8]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -115,11 +115,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "attack_res[(\"alpha\", \"fraudar\", 400.0, 0.0)].to_csv(\"ar.csv\")"
+    "# attack_res[(\"alpha\", \"fraudar\", 400.0, 0.0)].to_csv(\"ar.csv\")"
    ]
   },
   {
@@ -288,15 +288,6 @@
     "}\n",
     "df_met = pd.concat(dict_met, keys=dict_met.keys())\n",
     "display(df_met)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 8,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# attack_res[(\"alpha\", \"rsd\", 400.0, 0.2)].to_csv(\"ar2.csv\")"
    ]
   },
   {
